--- a/week1/index.html
+++ b/week1/index.html
@@ -12,7 +12,9 @@
 
 <body>
 
-<h1> Hello Worlds </h1>
+<h1> Hello World </h1>
+<h2> My name is Jozi Mobarik,Welcome...</h2>
+
  <script src = "js/scripts.js"></scripts>
  </body>
  </html>
