--- a/week1/index.html
+++ b/week1/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <h1> Hello World </h1>
-<h2> My name is Jozi Mobarik,Welcome...</h2>
+<h2> My name is Jozi Mobarik,Welcome.</h2>
 
  <script src = "js/scripts.js"></scripts>
  </body>
