--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -29,7 +29,7 @@
     <div class="BlogPostContent">
       <p> Hello</p>
     </article>
-  </section>]
+  </section>
 
   <footer id = "Page Footer">
     <a href = "#"> Legal  Stuff</a>
