--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -15,7 +15,7 @@
 <nav id = "SiteNavigation">
   <ul>
     <li><a href ="#" > Home</a></li>
-      <li><a href ="#" > About</a></li>
+      <li><a href ="#" > About Us</a></li>
         <li><a href ="#" > Contact</a></li>
      </ul>
    </nav>
