--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -8,7 +8,7 @@
   <body>
 
 <header id = "Page Header">
-  <img src="blog.jpg"  id="SiteLogo"/>
+  <img src="blog2.jpg"  id="SiteLogo"/>
   <h1 id = "Site Title"> The Blog</h1>
 </header>
 
