--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -27,7 +27,7 @@
       <time class = "BlogPostDate" pubdate = "pubdate">2012-04-10</time>
     </header>
     <div class="BlogPostContent">
-      <p> Hello</p>
+      <p> Hello & Welcome</p>
     </article>
   </section>
 
