--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -1,41 +1,58 @@
 <!doctype hmtl>
 
+
 <html>
   <head>
+    <link rel= "stylesheet" type = "text/css" href="style/style.css">
     <meta charset="utf-8">
     <title>The Blog </title>
   </head>
-  <body>
+<body>
 
-<header id = "Page Header">
+<header id = "Page-Header">
   <img src="blog2.jpg"  id="SiteLogo"/>
-  <h1 id = "Site Title"> The Blog</h1>
+  <h1 id = "title"> Huffington Post Blog</h1>
 </header>
 
-<nav id = "SiteNavigation">
+<nav id="nav">
   <ul>
-    <li><a href ="#" > Home</a></li>
-      <li><a href ="#" > About Us</a></li>
-        <li><a href ="#" > Contact</a></li>
+    <li> <a href ="#" > Home</a> </li>
+      <li ><a href ="#" > About Us</a> </li>
+        <li> <a href ="#" > Contact</a> </li>
      </ul>
    </nav>
 
-<section id = "Page content">
+<section id = "Page-content">
   <article class  = "BlogPost">
+    <div class ="row">
+      <div class="column">
     <header>
-      <h1 class = "BlogPostTitle">Blog Post Title </h1>
-      <time class = "BlogPostDate" pubdate = "pubdate">2012-04-10</time>
-    </header>
+          <img src="blog2.jpg"  id="SiteLogo"/>
+      </header>
+
+      <div class="BlogPostContent">
+        <p class = "warning" > This text will be displayed in bold.</p>
+     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+  </div>
+</div>
+  <div class="column">
+      <div class="contains">
+      <div class="floating-box">Floating box</div>
+      <div class="floating-box">Floating box</div>
+    </div>
     <div class="BlogPostContent">
-      <p> Hello & Welcome</p>
-    </article>
+      <p class = "warning" > This text will be displayed in bold.</p>
+   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+</div>
+    </div>
+  </div>
+
+  </article>
   </section>
 
   <footer id = "Page Footer">
     <a href = "#"> Legal Stuff</a>
   </footer>
-
-
 
   </body>
   </html>
