--- a/project/fridgePage.html
+++ b/project/fridgePage.html
@@ -25,7 +25,7 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Item Name</th>
+                    <th>Item Names</th>
                     <th>Expiry Date</th>
                 </tr>
             </thead>
