--- a/project/fridgePage.html
+++ b/project/fridgePage.html
@@ -25,17 +25,17 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Item Names</th>
+                    <th>Item Name</th>
                     <th>Expiry Date</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td><strong>Item Number 1</strong></td>
-                    <td>14/03/2017</td>
+                    <td>14/03/201</td>
                 </tr>
                 <tr>
-                    <td><strong>Item Number 2&nbsp;</strong></td>
+                    <td><strong>Item Number 2</strong></td>
                     <td>15/03/2018</td>
                 </tr>
             </tbody>
