--- a/lab7/JQueryBooks.html
+++ b/lab7/JQueryBooks.html
@@ -14,5 +14,7 @@
       <a href="#" class="btn btn-primary" id="retrieve-resources">Retrieve List</a>
       <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="getresources.js"></script>
+        <script src="jquery-3.3.1.min.js"></script>
+
       </body>
       </html>
