--- a/lab7/JQueryBooks.html
+++ b/lab7/JQueryBooks.html
@@ -1,7 +1,9 @@
   <!DOCTYPE html>
   <html>
   <head>
+
     <meta charset="utf-8">
+      <script src="jquery-3.3.1.min.js"></script>
     <title>jQuery.ajax()</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
@@ -11,10 +13,10 @@
       <p>jQuery example using <a href="http://api.jquery.com/jquery.ajax/">jQuery.ajax()</a>
         to retrieve a list of JavaScript Training Resources.</p>
       </div>
-      <a href="#" class="btn btn-primary" id="retrieve-resources">Retrieve List</a>
-      <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+      <a href="#" class="btn btn-primary" id="retrieve-resources"Retrieve List</a>
+       <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="getresources.js"></script>
-        <script src="jquery-3.3.1.min.js"></script>
+
 
       </body>
       </html>
