--- a/lab7/JQueryBooks.html
+++ b/lab7/JQueryBooks.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta charset="utf-8">
-   
+
     <title>jQuery.ajax()</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
@@ -16,6 +16,7 @@
       <a href="#" class="btn btn-primary" id="retrieve-resources">Retrieve List</a>
        <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="getresources.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 
       </body>
