--- a/lab2/flexbox.html
+++ b/lab2/flexbox.html
@@ -2,13 +2,13 @@
   <head>
     <link rel= "stylesheet" type = "text/css" href="style/flexbox.css">
     <meta charset="utf-8">
-    <title>The Blog </title>
+    <title> The Blog </title>
   </head>
 <body>
 
-<header id = "Page-Header">
+ <header id = "Page-Header">
   <img src="blog2.jpg"  id="SiteLogo"/>
-  <h1 id = "title"> Huffington Post Blog</h1>
+  <h2>Huffington Post </h2>
 </header>
 
 <nav id="nav">
@@ -24,7 +24,7 @@
 
          <div class="flex-1">
        <header>
-           <h1 class = "BlogPostTitle">Blog Post Title </h1>
+
          </header>
 
          <div class="BlogPostContent">
@@ -32,17 +32,17 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
      </div>
    </div>
+
      <div class="flex-2">
        <div class="container">
-         <div class="floating-box">  <img src="blog2.jpg"  id="SiteLogo"/></div>
-         <div class="floating-box">Floating box</div>
-         <div class="floating-box">Floating box</div>
-       </div>
+         <div class="floating-box">  <img src="chrome.png"  id="SiteLogo"/></div>
+         <div class="floating-box"><img src="chrome.png"  id="SiteLogo"/></div>
+          <div class="floating-box"><img src="chrome.png"  id="SiteLogo"/></div>
+        </div>
          <div class="BlogPostContent">
            <p class = "warning" > This text will be displayed in bold.</p>
          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
          </div>
-
          </div>
 
      </article>
