--- a/lab11/public/form.html
+++ b/lab11/public/form.html
@@ -5,7 +5,7 @@
 </head>
 <body>
  <h1>Twitter Form</h1>
- <form action="/">
+ <form action="/getform">
  Enter Twitter Screen Name To Search:<br>
  <input type="text" name="name" value=""/><br>
  <input type="submit" value="Submit"/>
