--- a/lab12/public/add.html
+++ b/lab12/public/add.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
- <h1>Add some quotes!/h1>
+ <h1>Add some quotes!</h1>
  <form action="/quotes" method="POST">
  <input type="text" placeholder="name" name="name">
  <input type="text" placeholder="quote" name="quote">
