--- a/lab8/JqueryAjax .html
+++ b/lab8/JqueryAjax .html
@@ -11,8 +11,8 @@ They are in order of progression-->
 <!-- <script src="addItem.js"></script> -->
 <!-- <script src="submitToList.js"></script> -->
 <!-- <script src="printJSON.js"></script> -->
-<script src="prettyPrintJSON.js"></script>
-<!-- <script src="FinalScript.js"></script> -->
+<!-- <script src="prettyPrintJSON.js"></script> -->
+<script src="FinalScript.js"></script>
 </head>
 <body id="base">
 	<h1>Jozi's very usefull movie search</h1>
