--- a/lab11/public/form.html
+++ b/lab11/public/form.html
@@ -9,6 +9,17 @@
  Enter Twitter Screen Name To Search:<br>
  <input type="text" name="name" value=""/><br>
  <input type="submit" value="Submit"/>
- </form>
+</form>
+
+
+ <button onclick="myFunction()">Try it</button>
+
+
+ <div class ="BarcodeScreen">
+
+
+ </div>
+
+
 </body>
 </html>
