--- a/lab11/public/form.html
+++ b/lab11/public/form.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <script src = "quagga.js" ></script>
  <title>Form Test</title>
 </head>
 <body>
@@ -19,6 +21,8 @@
 
 
  </div>
+
+
 
 
 </body>
